update product card links, fix dark mode colors and add favicon

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,9 @@
   --color-red: #{$color-red};
   --color-green: #{$color-green};
   --color-border: #{$color-elements};
+  --color-border-active-selector: #{$color-icons};
+  --color-border-selector: #{$color-elements};
+  --border-width-selected: #{$border-width-selected};
 }
 
 body.dark {
@@ -19,7 +22,9 @@ body.dark {
   --color-white: #161A1D;
   --color-elements: #161A1D;
   --color-icons: #B4BDC3;
-
+  --color-border-active-selector: #{$color-white};
+  --color-border-selector: #{$color-icons};
+  --border-width-selected: 2px;
 }
 
 @import './modules/shared/assets/styles/fonts';
