--- a/src/components/Selector/Selector.module.scss
+++ b/src/components/Selector/Selector.module.scss
@@ -16,17 +16,19 @@
     width: 32px;
     height: 32px;
     border-radius: 50%;
+    border-color: var(--color-border-selector);
 
     cursor: pointer;
 
     @include shadow('selector');
 
     &:hover:not(.selected) {
-      border: 1px solid var(--color-icons);
+      border-color: var(--color-border-active-selector);
     }
 
     &.selected {
-      border: 1px solid var(--color-primary);
+      border-color: var(--color-primary);
+      border-width: var(--border-width-selected);
 
       @include shadow('selector');
     }
