--- a/src/modules/shared/assets/styles/_variables.scss
+++ b/src/modules/shared/assets/styles/_variables.scss
@@ -12,13 +12,14 @@ $color-red: #EB5757;
 $header-height-desktop: 64px;
 $header-height-mobile: 48px;
 $transition-base: 0.3s ease;
+$border-width-selected: 1px;
 $tablet: 1199px;
 $mobile: 639px;
 $shadows: (
   'dropdown': 0 4px 16px rgba(0, 0, 0, 0.05),
   'button': 0 3px 13px rgba(23, 32, 49, 0.3),
   'card': 0 2px 15px rgba(0, 0, 0, 0.1),
-  'selector': inset 0 0 0 2px #fff,
+  'selector': inset 0 0 0 2px var(--color-white),
   'modal': 0 4px 20px rgba(0, 0, 0, 0.1),
   'category': 0 4px 15px rgba(0, 0, 0, 0.2),
 );
